Add global asset file routes
